adds graph webview (wip)

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,8 @@
 		"strict": true,
 		"target": "es2020",
 		"useDefineForClassFields": true,
-		"useUnknownInCatchVariables": false
+		"useUnknownInCatchVariables": false,
+		"jsx": "react"
 	},
 	"include": ["src/**/*"]
 }
